--- a/bower.json
+++ b/bower.json
@@ -2,8 +2,14 @@
   "name": "Html5Video",
   "version": "1.0.0",
   "private": true,
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
+    "jquery": "~2.1.4",
+    "font-awesome": "~4.3.0",
+    "bootstrap": "~3.3.5",
+    "video-js": "~4.12.9",
+    "jquery-cookie": "~1.4.1",
+    "bowser": "~0.7.3",
+    "videojs-youtube": "~1.2.12"
   }
 }
